app/assets/stylesheets/pages/_profile.scss
.pet-summary {
  overflow: auto;
  padding: 16px;
  border: 1px solid;
  border-radius: 10px;
  margin: 0 8px 8px 8px;
}

.pet-prof-icon {
  height: 200px;
  width: 200px;
  border-radius: 50%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.mobile-center {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.img-box-sizing {
  height: 136px;
  width: 136px;
  margin: 8px;
  border-radius: 10px;
  object-fit: cover;
}

.family-pet {
  margin: auto;
  display: flex;
  align-items: baseline;
  justify-content: center;
}

.family-pet-name {
  padding: 0;
  margin-bottom: 0;
}

.sex-icon-male {
  padding-left: 10px;
  font-size: 20px;
  color: #390BBB;
}

.sex-icon-female {
  padding-left: 10px;
  font-size: 20px;
  color: #E7B1F0;
}

.pet-bio {
  margin-bottom: 0;
}

